tests/src/Loader/classloader/generics/Instantiation/Positive/NestedClass02.fact.cs
using CoreclrTestLib;
using Xunit;

namespace Loader_classloader
{
    public class _generics_Instantiation_Positive_NestedClass02_NestedClass02_
    {
        [OuterLoop]
        [Fact]
        public void _generics_Instantiation_Positive_NestedClass02_NestedClass02_cmd()
        {
            CoreclrTestWrapperLib.RunTest("Loader\\classloader\\generics\\Instantiation\\Positive\\NestedClass02\\NestedClass02.cmd");
        }
    }
}
