tests/src/Loader/classloader/generics/Instantiation/Negative/Type_ofT_Inherit_FromT.fact.cs
using CoreclrTestLib;
using Xunit;

namespace Loader_classloader
{
    public class _generics_Instantiation_Negative_Type_ofT_Inherit_FromT_Type_ofT_Inherit_FromT_
    {
        [OuterLoop]
        [Fact]
        public void _generics_Instantiation_Negative_Type_ofT_Inherit_FromT_Type_ofT_Inherit_FromT_cmd()
        {
            CoreclrTestWrapperLib.RunTest("Loader\\classloader\\generics\\Instantiation\\Negative\\Type_ofT_Inherit_FromT\\Type_ofT_Inherit_FromT.cmd");
        }
    }
}
